# foo

src/: CMakeLists.txt
src/app/: CMakeLists.txt  app_main.c
src/app/command/: cmd.h  cmd_error.h
src/app/command/regular/: CMakeLists.txt  cmd.c  cmd_c.h  cmd_error.c  cmd_error_c.h  cmd_load_save.c  cmd_load_save.h  cmd_move.c  cmd_move.h  cmd_object_management.c  cmd_object_management.h
src/app/core/: app.h  app_command.h  app_command_buffer.h  app_core.h  app_cvar.h  app_error.h  app_imdraw.h  app_model.h  app_model_instance.h  app_pick_id.h  app_view.h  app_world.h
src/app/core/regular/: CMakeLists.txt  app.c  app_builtin_commands.c  app_builtin_commands.h  app_builtin_cvars.c  app_builtin_cvars.h  app_c.h  app_command.c  app_command_buffer.c  app_command_buffer_c.h  app_command_c.h  app_core.c  app_core_c.h  app_cvar.c  app_cvar_c.h  app_cvars_decl.h  app_error.c  app_error_c.h  app_imdraw.c  app_model.c  app_model_c.h  app_model_instance.c  app_model_instance_c.h  app_object.c  app_object.h  app_term.c  app_term.h  app_view.c  app_view_c.h  app_world.c  app_world_c.h
src/app/editor/: CMakeLists.txt  edit.h  edit_context.h  edit_error.h  edit_model_instance_selection.h
src/app/editor/gtk/: CMakeLists.txt  edit_gtk.c  edit_gtk.glade  edit_gtk_c.h  edit_gtk_error.c  edit_gtk_explorer.c  edit_gtk_explorer.h
src/app/editor/regular/: CMakeLists.txt  edit_context.c  edit_context_c.h  edit_cvars.c  edit_cvars.h  edit_cvars_decl.h  edit_error.c  edit_error_c.h  edit_imgui.c  edit_imgui.h  edit_inputs.c  edit_inputs.h  edit_load_save_commands.c  edit_load_save_commands.h  edit_model_instance_selection.c  edit_model_instance_selection.h  edit_model_instance_selection_c.h  edit_move_commands.c  edit_move_commands.h  edit_object_management_commands.c  edit_object_management_commands.h  edit_picking.c  edit_picking.h  edit_tools.c  edit_tools.h
src/app/game/: game.h  game_error.h
src/app/game/regular/: CMakeLists.txt  game.c  game_c.h  game_error.c  game_error_c.h
src/examples/: CMakeLists.txt  eg_rdr_model.c  eg_rdr_term.c  eg_render_backend.c  eg_rsrc_wavefront_obj.c
src/maths/: CMakeLists.txt
src/maths/simd/: CMakeLists.txt  aosf33.h  aosf44.h  aosq.h  simd.h
src/maths/simd/regular/: aosf44.c  aosq.c
src/maths/simd/sse/: CMakeLists.txt  sse.c  sse.h
src/render_backend/: CMakeLists.txt  rb.h  rb_func.h  rb_types.h  rbi.h  rbu.h
src/render_backend/null/: CMakeLists.txt  rb_null.c
src/render_backend/ogl3/: CMakeLists.txt  rb_ogl3.h  rb_ogl3_attrib.c  rb_ogl3_buffer.h  rb_ogl3_buffers.c  rb_ogl3_buffers.h  rb_ogl3_context.c  rb_ogl3_context.h  rb_ogl3_framebuffer.c  rb_ogl3_miscellaneous.c  rb_ogl3_program.c  rb_ogl3_program.h  rb_ogl3_sampler.c  rb_ogl3_shader.c  rb_ogl3_shader.h  rb_ogl3_texture.c  rb_ogl3_texture.h  rb_ogl3_uniform.c  rb_ogl3_vertex_array.c
src/render_backend/rbi/: CMakeLists.txt  rbi.c
src/render_backend/utils/: CMakeLists.txt  rbu_geometry.c  rbu_quad.c
src/renderer/: rdr.h  rdr_attrib.h  rdr_error.h  rdr_font.h  rdr_frame.h  rdr_imdraw.h  rdr_material.h  rdr_mesh.h  rdr_model.h  rdr_model_instance.h  rdr_system.h  rdr_term.h  rdr_world.h
src/renderer/regular/: CMakeLists.txt  rdr_attrib.c  rdr_attrib_c.h  rdr_draw_desc.h  rdr_error.c  rdr_error_c.h  rdr_font.c  rdr_font_c.h  rdr_frame.c  rdr_imdraw.c  rdr_imdraw.h  rdr_imdraw_c.h  rdr_material.c  rdr_material_c.h  rdr_mesh.c  rdr_mesh_c.h  rdr_model.c  rdr_model_c.h  rdr_model_instance.c  rdr_model_instance_c.h  rdr_object.h  rdr_picking.c  rdr_picking.h  rdr_system.c  rdr_system_c.h  rdr_term.c  rdr_term_c.h  rdr_uniform.h  rdr_world.c  rdr_world_c.h
src/resources/: rsrc.h  rsrc_context.h  rsrc_error.h  rsrc_font.h  rsrc_geometry.h  rsrc_wavefront_obj.h
src/resources/regular/: CMakeLists.txt  rsrc.c  rsrc_context.c  rsrc_context_c.h  rsrc_error.c  rsrc_error_c.h  rsrc_font.c  rsrc_font_c.h  rsrc_geometry.c  rsrc_wavefront_obj.c  rsrc_wavefront_obj_c.h
src/stdlib/: sl.h  sl_context.h  sl_error.h  sl_flat_map.h  sl_flat_set.h  sl_hash_table.h  sl_linked_list.h  sl_logger.h  sl_set.h  sl_sorted_vector.h  sl_string.h  sl_string.h.def  sl_string_def.h  sl_vector.h  sl_wstring.h
src/stdlib/regular/: CMakeLists.txt  sl.h  sl_c.h  sl_context.c  sl_context_c.h  sl_flat_map.c  sl_flat_set.c  sl_hash_table.c  sl_linked_list.c  sl_logger.c  sl_set.c  sl_sorted_vector.c  sl_string.c  sl_string.c.def  sl_string_def.c  sl_vector.c  sl_wstring.c
src/sys/: CMakeLists.txt  clock_time.h  list.h  math.h  mem_allocator.h  ref_count.h  sys.h  sys_error.h  sys_logger.h
src/sys/regular/: CMakeLists.txt  clock_time.c  mem_allocator.c  sys.c  sys_c.h  sys_logger.c
src/utest/: CMakeLists.txt  utest.h  utest_rdr_world.c  utest_renderer.c  utest_sl_sorted_vector.c  utest_sl_vector.c
src/utest/app/: CMakeLists.txt
src/utest/app/core/: CMakeLists.txt  cube_obj.h  utest_app.c  utest_app_command.c  utest_app_command_buffer.c  utest_app_cvar.c  utest_app_model.c  utest_app_world.c
src/utest/app/editor/: CMakeLists.txt  utest_edit.c  utest_edit_model_instance_selection.c  utest_editor.c
src/utest/app/game/: CMakeLists.txt  utest_game.c
src/utest/maths/: CMakeLists.txt  utest_maths.c
src/utest/renderer/: CMakeLists.txt  utest_rdr_font.c  utest_rdr_frame.c  utest_rdr_material.c  utest_rdr_mesh.c  utest_rdr_model.c  utest_rdr_model_instance.c  utest_rdr_system.c  utest_rdr_term.c  utest_rdr_world.c  utest_renderer.c
src/utest/resources/: CMakeLists.txt  utest_rsrc_font.c
src/utest/stdlib/: CMakeLists.txt  utest_sl_flat_map.c  utest_sl_flat_set.c  utest_sl_hash_table.c  utest_sl_linked_list.c  utest_sl_logger.c  utest_sl_set.c  utest_sl_sorted_vector.c  utest_sl_string.c  utest_sl_string_def.c  utest_sl_vector.c
src/utest/sys/: CMakeLists.txt  utest_list.c  utest_mem_allocator.c  utest_sys.c
src/window_manager/: wm.h  wm_device.h  wm_error.h  wm_input.h  wm_types.h  wm_window.h
src/window_manager/glfw/: CMakeLists.txt  wm_glfw.c  wm_glfw_device.c  wm_glfw_device_c.h  wm_glfw_error.c  wm_glfw_error.h  wm_glfw_input.c  wm_glfw_input.h  wm_glfw_window.c
